--- a/exercise-tracker/backend/vercel.json
+++ b/exercise-tracker/backend/vercel.json
@@ -2,20 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.js",
+            "src": "/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
-        }
-    ],
-    "rewrites": [
-        { 
-            "source": "/index.js", 
-            "destination": "/routes" 
+            "dest": "/routes"
         }
     ]
 }
